# FVLib

./: .gitignore  FVLib.sln
FVLib/: CMakeLists.txt  FVLib.vcxproj  FVLib.vcxproj.filters  a.py  acceleration  default_path.eps  default_path_prokladka_position.eps  output.json  test.json  test2.json  test3.json
FVLib/Src/: Broadcast.cpp  Broadcast.h  CircularSegment.cpp  CircularSegment.h  Copter.cpp  Copter.h  DataParser.cpp  DataParser.h  DecisionMaker.cpp  DecisionMaker.h  FV.cpp  FV.h  FlightPlan.cpp  FlightPlan.h  GlobalSituation.cpp  GlobalSituation.h  MassPoint.cpp  MassPoint.h  MaterialPoint.cpp  MaterialPoint.h  Modeler.cpp  Modeler.h  NavigationPlan.cpp  NavigationPlan.h  Obstacle.h  OutputData.cpp  OutputData.h  ParamReader.cpp  ParamReader.h  Path.cpp  Path.h  PathPoint.cpp  PathPoint.h  Plane.cpp  Plane.h  Point.h  RectilinearSegment.cpp  RectilinearSegment.h  TurnData.cpp  TurnData.h  (+7 more)
FVLib/Src/archive/: FV.cpp
FVLib/Src/lib/: flight_plan.h  library.cpp  library.h  plane.h  simulation.cpp  simulation.h
FVLib/Tests/: _descript.ion  output1.json  output3.json  test1.json  test2.json  test3.json
FVLib/Tests/Ver1/: test1.json  test2.json
FVLib/tex/Практика/: 3point.eps  main.aux  main.out  main.tex  main.toc
Тексты/Бакалаврская/: default_path_prokladka_position.eps  main.synctex  main.tex  tochki_kasania.eps
Тексты/Бакалаврская/GNU Plot/: output.json  velocity.plt
Тексты/Бакалаврская/Бумаги/: Дербенев_Задание_на_ВКР.docx  Дербенев_Отзыв_руководителя.docx
Тексты/Бакалаврская/Материалы/: AcftConstDynDervs.m
Тексты/Практика преддипломная/: 3pointCircle.eps  default_path_prokladka.eps  main.tex
Тексты/Презентация/: default_path_not_procladka.eps  main.synctex  main.tex
